# GrappleGame

./: CMakeLists.txt  config.json  globals.json  notes.txt  test.json
assets/font/: Karla-Regular-Small.cmp  Karla-Regular-Small.txt  toBytes.py
assets/levels/: level1  level1_new  level2  level2_new  level3  level4_new  levels1  levelt
assets/tiles/: tiles.json
config/: level.txt  level1  levels.json  options.json  static_templates.json
dependencies/SDL2/cmake/: SDL2ConfigVersion.cmake  SDL2Targets-release.cmake  SDL2Targets.cmake  SDL2mainTargets-release.cmake  SDL2mainTargets.cmake  SDL2staticTargets-release.cmake  SDL2staticTargets.cmake
dependencies/SDL2/include/SDL2/: SDL_config.h  SDL_revision.h
dependencies/SDL2/lib/: SDL2main.lib
dependencies/SDL2_image/cmake/: Findlibjxl.cmake  Findwebp.cmake  SDL2_image-shared-targets-release.cmake  SDL2_image-shared-targets.cmake  SDL2_imageConfig.cmake  SDL2_imageConfigVersion.cmake
dependencies/SDL2_image/include/SDL2/: SDL_image.h
dependencies/SDL2_image/lib/: SDL2_image.lib
dependencies/SDL2_image/lib/pkgconfig/: SDL2_image.pc
src/: ballGame.cpp  ballGame.h  climbGame.cpp  climbGame.h  entity.cpp  entity.h  exceptions.h  fileIO.h  game.cpp  game.h  geometry.cpp  geometry.h  globals.cpp  globals.h  input.cpp  input.h  json.cpp  json.h  level.cpp  level.h  levelMaker.cpp  levelMaker.h  list.c  list.h  main.c  main.cpp  player.cpp  player.h  testGame.h  texture.cpp  texture.h  utilities.h
src/engine/: engine.cpp  engine.h  game.cpp  game.h  input.cpp  input.h  texture.cpp  texture.h  ui.cpp  ui.h
src/file/: compression.cpp  compression.h  fileIO.h  json.cpp  json.h
src/game/: climbGame.cpp  climbGame.h  config.cpp  config.h  entity.cpp  entity.h  game.cpp  game.h  input.cpp  input.h  level.cpp  level.h  levelMaker.cpp  levelMaker.h  menu.cpp  menu.h  state.cpp  state.h  texture.cpp
src/nativefiledialog/: nfd_common.c  nfd_win.cpp  nfdcpp.cpp  nfdcpp.h
src/util/: exceptions.h  geometry.cpp  geometry.h  utilities.h
